fixed graphic stitch issue on big screens and fixed overlaps

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,5 +27,6 @@ a {
 .background-graphic-upper {
   width: 100%;
   height: 700px;
-  background: linear-gradient(180deg, rgba(13, 13, 13, 0) 13.65%, #0D0D0D 93.29%), url(/images/bg-graphic-upper.svg);
+  background-size: cover;
+  background-image: url(/images/bg-graphic-upper.svg);
 }
